examples/invalid/invalidcall.mcl

void foo() {
    /say foo
}

void bar() {
    /say bar
    foo;
}